Fix visibility.scss

--- a/app/assets/stylesheets/base/_visibility.scss
+++ b/app/assets/stylesheets/base/_visibility.scss
@@ -1,13 +1,13 @@
 .hidden-mobile {
   display: none !important;
-  @include desktop {
+  @include desktop-up {
     display: block !important;
   }
 }
 
 .hidden-desktop {
   display: block !important;
-  @include desktop {
+  @include desktop-up {
     display: none !important;
   }
 }
